mlflow/04-mlflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-server
  namespace: mlops-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow-server
  template:
    metadata:
      labels:
        app: mlflow-server
    spec:
      containers:
      - name: mlflow
        image: aayud/mlflow-mysql:2.12.1  # Build this first
        args:
        - mlflow
        - server
        - --backend-store-uri
        - mysql+pymysql://$(MYSQL_USER):$(MYSQL_PASSWORD)@mysql/$(DB_NAME)
        - --default-artifact-root
        - s3://$(BUCKET_NAME)/
        - --host
        - 0.0.0.0
        - --port
        - "5000"
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
