mlflow/07-mlflow-deployment-s3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-server
  namespace: mlflow
  labels:
    app: mlflow-server
    component: tracking
    version: "2.12.1"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mlflow-server
  template:
    metadata:
      labels:
        app: mlflow-server
        component: tracking
    spec:
      containers:
      - name: mlflow
        image: aayud/mlflow-mysql:2.12.1
        command:
        - mlflow
        args:
        - server
        - --host
        - 0.0.0.0
        - --port
        - "5000"
        - --backend-store-uri
        - mysql+pymysql://aayushman:aayu2004@mlflow-mariadb.mlflow.svc.cluster.local:3306/mlflow_db
        - --default-artifact-root
        - s3://mlflow-artifacts-1772014216/
        - --workers
        - "4"
        ports:
        - containerPort: 5000
          name: http
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 15
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
