mlflow/05-mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-server
  namespace: mlops-blue
spec:
  selector:
    app: mlflow-server
  ports:
  - port: 5000
    targetPort: 5000
    name: http
