mlflow/08-mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-mariadb
  namespace: mlflow
spec:
  selector:
    app: mlflow-mariadb
  ports:
  - port: 3306
    targetPort: 3306
